--- a/LLanguage/LLanguage.vcxproj
+++ b/LLanguage/LLanguage.vcxproj
@@ -124,30 +124,32 @@
   <ItemGroup>
     <ClCompile Include="..\src\main.cpp" />
     <ClCompile Include="..\src\vm\l_compiler_utilities.cpp" />
-    <ClCompile Include="..\src\vm\l_compile_tree_to_cpp.cpp" />
-    <ClCompile Include="..\src\vm\l_compile_tree_to_js.cpp" />
+    <ClCompile Include="..\src\vm\l_function.cpp" />
     <ClCompile Include="..\src\vm\l_gc.cpp" />
     <ClCompile Include="..\src\vm\l_lib_base.cpp" />
+    <ClCompile Include="..\src\vm\l_opcode.cpp" />
     <ClCompile Include="..\src\vm\l_string.cpp" />
+    <ClCompile Include="..\src\vm\l_table.cpp" />
     <ClCompile Include="..\src\vm\l_vm.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\include\backend_cpp_header.h" />
-    <ClInclude Include="..\include\compiler_tree_to_vm.h" />
-    <ClInclude Include="..\include\compile_tree_to_cpp.h" />
-    <ClInclude Include="..\include\compile_tree_to_js.h" />
-    <ClInclude Include="..\include\config.h" />
-    <ClInclude Include="..\include\l_compiler_utilities.h" />
-    <ClInclude Include="..\include\l_lib_base.h" />
-    <ClInclude Include="..\include\l_table.h" />
-    <ClInclude Include="..\include\parser.h" />
-    <ClInclude Include="..\include\program_language.h" />
-    <ClInclude Include="..\include\syntactic_tree.h" />
-    <ClInclude Include="..\include\variables_context.h" />
+    <ClInclude Include="..\include\l_config.h" />
+    <ClInclude Include="..\include\l_program_language.h" />
+    <ClInclude Include="..\include\vm\l_call_context.h" />
+    <ClInclude Include="..\include\vm\l_commands.h" />
+    <ClInclude Include="..\include\vm\l_compiler_tree_to_vm.h" />
+    <ClInclude Include="..\include\vm\l_compiler_utilities.h" />
+    <ClInclude Include="..\include\vm\l_function.h" />
     <ClInclude Include="..\include\vm\l_gc.h" />
+    <ClInclude Include="..\include\vm\l_lib_base.h" />
     <ClInclude Include="..\include\vm\l_object.h" />
+    <ClInclude Include="..\include\vm\l_opcode.h" />
+    <ClInclude Include="..\include\vm\l_parser.h" />
     <ClInclude Include="..\include\vm\l_string.h" />
+    <ClInclude Include="..\include\vm\l_syntactic_tree.h" />
+    <ClInclude Include="..\include\vm\l_table.h" />
     <ClInclude Include="..\include\vm\l_variable.h" />
+    <ClInclude Include="..\include\vm\l_variables_context.h" />
     <ClInclude Include="..\include\vm\l_vector.h" />
     <ClInclude Include="..\include\vm\l_vm.h" />
   </ItemGroup>
