--- a/LLanguage/LLanguage.vcxproj.filters
+++ b/LLanguage/LLanguage.vcxproj.filters
@@ -24,12 +24,6 @@
     <ClCompile Include="..\src\main.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\vm\l_compile_tree_to_cpp.cpp">
-      <Filter>File di origine\vm</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\vm\l_compile_tree_to_js.cpp">
-      <Filter>File di origine\vm</Filter>
-    </ClCompile>
     <ClCompile Include="..\src\vm\l_compiler_utilities.cpp">
       <Filter>File di origine\vm</Filter>
     </ClCompile>
@@ -45,44 +39,17 @@
     <ClCompile Include="..\src\vm\l_vm.cpp">
       <Filter>File di origine\vm</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\vm\l_function.cpp">
+      <Filter>File di origine\vm</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\vm\l_opcode.cpp">
+      <Filter>File di origine\vm</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\vm\l_table.cpp">
+      <Filter>File di origine\vm</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\include\backend_cpp_header.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\compile_tree_to_cpp.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\compile_tree_to_js.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\compiler_tree_to_vm.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\config.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\l_compiler_utilities.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\l_lib_base.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\l_table.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\parser.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\program_language.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\syntactic_tree.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\variables_context.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
     <ClInclude Include="..\include\vm\l_gc.h">
       <Filter>File di intestazione\vm</Filter>
     </ClInclude>
@@ -100,6 +67,45 @@
     </ClInclude>
     <ClInclude Include="..\include\vm\l_vm.h">
       <Filter>File di intestazione\vm</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vm\l_call_context.h">
+      <Filter>File di intestazione\vm</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vm\l_commands.h">
+      <Filter>File di intestazione\vm</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vm\l_compiler_tree_to_vm.h">
+      <Filter>File di intestazione\vm</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vm\l_compiler_utilities.h">
+      <Filter>File di intestazione\vm</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vm\l_function.h">
+      <Filter>File di intestazione\vm</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vm\l_lib_base.h">
+      <Filter>File di intestazione\vm</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vm\l_opcode.h">
+      <Filter>File di intestazione\vm</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vm\l_parser.h">
+      <Filter>File di intestazione\vm</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vm\l_syntactic_tree.h">
+      <Filter>File di intestazione\vm</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vm\l_table.h">
+      <Filter>File di intestazione\vm</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\vm\l_variables_context.h">
+      <Filter>File di intestazione\vm</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\l_config.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\l_program_language.h">
+      <Filter>File di intestazione</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
