--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(L_LANGUAGE)
 # Compile VM & Main
 add_subdirectory(llib)
 add_subdirectory(l)
+add_subdirectory(tests)
 
 # LLIB before L
 add_dependencies(L LLIB)
